--- a/education.html
+++ b/education.html
@@ -61,6 +61,13 @@
     <main class="row">
         <section class="col-12 col-sm-12 experience p-0">
             <article class="col-12 col-sm-12 col-lg-10 e-about">
+                <img id="unc" class="col-8 col-sm-6 col-lg-4" src="HCC-Logo-White-footer.png" style="margin: 3em;" onMouseDown="popupMsg('Unable to access image functionalities')">
+                <h5 class="col-12 col-sm-12 e-co text-center">Visiting Student</h5>
+                <p class="col-12 col-sm-12 e-time text-center"><i>August 2022 - December 2022</i></p>
+                <p class="col-12 col-sm-12 e-location text-center">Courses completed: Medical Terminology for Health Professionals, Professional Interactions in Healthcare</p>
+                <p class="col-12 col-sm-12 e-location text-center">Clyde, North Carolina</p>
+            </article>
+            <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <img id="unc" class="col-12 col-sm-8 col-lg-6" src="unc_logo.png" style="margin: 3em;" onMouseDown="popupMsg('Unable to access image functionalities')">
                 <h5 class="col-12 col-sm-12 e-co text-center">Bachelor of Science - B.S. Biology, Chemistry Minor, Neuroscience Minor</h5>
                 <p class="col-12 col-sm-12 e-time text-center"><i>August 2018 - May 2022</i></p>
