--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <article class="col-12 col-sm-12 col-md-6 col-lg-6 signature_title">
                 <img id="signature_stephen" class="col-12 col-sm-7 col-md-12 col-lg-12" src="white_signature.png" onMouseDown="popupMsg('Unable to access image functionalities')">
                 <p id="title" class="col-12 col-sm-12 col-lg-12 text-center pt-2">ONLINE RESUME</p>
+                <p id="updated" class="col-12 col-sm-12 col-lg-12 text-center pt-2">(Updated December 2022)</p>
             </article>
         </section>
     </main>
