--- a/printing.html
+++ b/printing.html
@@ -56,24 +56,23 @@
     </section>
     <section class="row experience">
         <h2 class="col-12 col-sm-12 section-titles">Experience</h2>
-<!----> <section class="col-12 col-sm-12 group">
+        <section class="col-12 col-sm-12 group">
 
             <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Ophthalmic Technician</h4>
+                <h4 class="col-12 col-sm-12 e-titles">Ophthalmic Assistant</h4>
                 <h5 class="col-12 col-sm-12 e-co">Mountain Eye Associates</h5>
                 <p class="col-12 col-sm-12 e-time"><i>May 2022 - Present</i></p>
                 <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
                 <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Assists Ophthalmologists/Optometrists treating patients with various visual conditions</li>
-                    <li class="col-12 col-sm-12">Develops relationships with patients while following Physician orders</li>
-                    <li class="col-12 col-sm-12">Works with patients to choose the best-fit eyewear - contacts, glasses, bifocals, trifocals</li>
-                    <li class="col-12 col-sm-12">Instructs patients on the proper utilization of contact lens and eyeglass use/care</li>
-                    <li class="col-12 col-sm-12">Documents appointment details, maintaining patient charts with detailed notes</li>
-                    <li class="col-12 col-sm-12">Administrates visual field tests, eye drop administration for dilation, tonometry, fluorescein angiography gdx, refract patients, etc</li>
-                    <li class="col-12 col-sm-12">Assists doctors in minor surgeries</li>
-                    <li class="col-12 col-sm-12">Cleans and sterilizes equipment and cleanes the work environment/patient rooms</li>
-                    <li class="col-12 col-sm-12">Provides proper drops to prepare patients for Yag surgeries</li>
-                    <li class="col-12 col-sm-12">Educates patients/families on surgery details, complications, and after-care</li>
+                    <li class="col-12 col-sm-11">Assists Ophthalmologists/Optometrists treating patients with various visual conditions</li>
+                    <li class="col-12 col-sm-11">Develops relationships with patients while following Physician orders</li>
+                    <li class="col-12 col-sm-11">Works with patients to choose the best-fit eyewear - contacts, monofocal glasses, bifocals, trifocals</li>
+                    <li class="col-12 col-sm-11">Instructs patients on the proper utilization of contact lens and eyeglass use/care</li>
+                    <li class="col-12 col-sm-11">Documents appointment details, maintaining patient charts with detailed notes</li>
+                    <li class="col-12 col-sm-11">Administers visual field tests, eye drop administration for dilation, tonometry, and refraction of patients</li>
+                    <li class="col-12 col-sm-11">Cleans and sterilizes equipment and cleans the work environment/patient rooms</li>
+                    <li class="col-12 col-sm-11">Provides proper drops to prepare patients for Yag/SLT surgeries</li>
+                    <li class="col-12 col-sm-11">Educates patients/families on surgery details, complications, and after-care</li>
                 </ul>
             </article>
 
@@ -112,11 +111,11 @@
                 <h5 class="col-12 col-sm-12 e-co">UNC Chapel Hill Chemistry Department</h5>
                 <p class="col-12 col-sm-12 e-time"><i>August 2021 - April 2022</i></p>
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
-                <ul clas="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Generated study aids and supplemental worksheets for students enrolled in the second course of organic chemistry at UNC Chapel Hill</li>
-                    <li class="col-12 col-sm-12">Provided aid through learning strategies, concept review, and upper-level thinking questions for students in a diverse classroom environment</li>
-                    <li class="col-12 col-sm-12">Collaborated with a peer mentor team and the instructor to improve the understanding of important organic chemistry concepts among students</li>
-                    <li class="col-12 col-sm-12">Developed problem-solving skills in order to maximize potential as a peer mentor</li>
+                <ul class="col-12 col-sm-12">
+                    <li class="col-12 col-sm-11">Generated study aids and supplemental worksheets for students enrolled in the second course of organic chemistry at UNC Chapel Hill</li>
+                    <li class="col-12 col-sm-11">Provided aid and served as a leader by demonstrating and creating learning strategies, concept review, and upper-level thinking questions for students in a diverse classroom environment</li>
+                    <li class="col-12 col-sm-11">Collaborated with a peer mentor team and the instructor to improve the understanding of important organic chemistry concepts among students</li>
+                    <li class="col-12 col-sm-11">Developed problem-solving skills in order to maximize potential as a peer mentor</li>
                 </ul>
             </article>
 
@@ -205,41 +204,6 @@
                 <h4 class="col-12 col-sm-12 e-titles">Adult and Pediatric First Aid/CPR/AED</h4>
                 <h5 class="col-12 col-sm-12 e-co">American Red Cross</h5>
                 <p class="col-12 col-sm-12 e-time">Exp. 2023</p>
-            </article>
-        </section>
-    </section>
-    <section class="row experience skills">
-        <h2 class="col-12 col-sm-12 section-titles">Skills</h2>
-        <section class="col-12 col-sm-12 group">
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">STEM-Related Skills</h4>
-                <ul class="col-12 col-sm-12" style="padding-left: 10vw;">
-                    <li class="col-12 col-sm-12">Adobe Suite: <i>Photoshop, Lightroom</i></li>
-                    <li class="col-12 col-sm-12">Basic Local Alignment Search Tool (BLAST)</li>
-                    <li class="col-12 col-sm-12">Biocyc Genome Database Collection</li>
-                    <li class="col-12 col-sm-12">Buffer Creation</li>
-                    <li class="col-12 col-sm-12">Confocal Lenses - Cellular Photography & Videography</li>
-                    <li class="col-12 col-sm-12">DSLR Camera Photography</li>
-                    <li class="col-12 col-sm-12">Fiji Image Processor</li>
-                    <li class="col-12 col-sm-12">Fluorescence Microscopy (Nikon Eclipse Series)</li>
-                    <li class="col-12 col-sm-12">High Performance Liquid (HPL) Chromatography</li>
-                    <li class="col-12 col-sm-12">Front-End Web Design (HTML5, CSS3)</li>
-                    <li class="col-12 col-sm-12">(MEGA11) Molecular Evolutionary Genetics Analysis Version 11</li>
-                    <li class="col-12 col-sm-12">NMR Spectrometry</li>
-                    <li class="col-12 col-sm-12">Solvent-Solvent Extractions</li>
-                    <li class="col-12 col-sm-12">Writing for Scientific Publications</li>
-                </ul>
-                <h4 class="col-12 col-sm-12 e-titles">Soft Skills</h4>
-                <ul class="col-12 col-sm-12" style="padding-left: 10vw;">
-                    <li class="col-12 col-sm-12">Career Management</li>
-                    <li class="col-12 col-sm-12">Communication</li>
-                    <li class="col-12 col-sm-12">Creativity & Problem-Solving</li>
-                    <li class="col-12 col-sm-12">Global Perspective</li>
-                    <li class="col-12 col-sm-12">Leadership</li>
-                    <li class="col-12 col-sm-12">Professionalism & Work Ethic</li>
-                    <li class="col-12 col-sm-12">Teamwork & Collaboration</li>
-                    <li class="col-12 col-sm-12">Technical Application</li>
-                </ul>
             </article>
         </section>
     </section>
