--- a/experience.html
+++ b/experience.html
@@ -63,11 +63,20 @@
         <section class="col-12 col-sm-12 experience">
 
             <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Ophthalmic Technician</h4>
+                <h4 class="col-12 col-sm-12 e-titles">Ophthalmic Assistant</h4>
                 <h5 class="col-12 col-sm-12 e-co">Mountain Eye Associates</h5>
                 <p class="col-12 col-sm-12 e-time"><i>May 2022 - Present</i></p>
                 <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
                 <ul class="col-12 col-sm-12">
+                    <li class="col-12 col-sm-11">Assists Ophthalmologists/Optometrists treating patients with various visual conditions</li>
+                    <li class="col-12 col-sm-11">Develops relationships with patients while following Physician orders</li>
+                    <li class="col-12 col-sm-11">Works with patients to choose the best-fit eyewear - contacts, monofocal glasses, bifocals, trifocals</li>
+                    <li class="col-12 col-sm-11">Instructs patients on the proper utilization of contact lens and eyeglass use/care</li>
+                    <li class="col-12 col-sm-11">Documents appointment details, maintaining patient charts with detailed notes</li>
+                    <li class="col-12 col-sm-11">Administers visual field tests, eye drop administration for dilation, tonometry, and refraction of patients</li>
+                    <li class="col-12 col-sm-11">Cleans and sterilizes equipment and cleans the work environment/patient rooms</li>
+                    <li class="col-12 col-sm-11">Provides proper drops to prepare patients for Yag/SLT surgeries</li>
+                    <li class="col-12 col-sm-11">Educates patients/families on surgery details, complications, and after-care</li>
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
@@ -121,7 +130,7 @@
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
                 <ul class="col-12 col-sm-12">
                     <li class="col-12 col-sm-11">Generated study aids and supplemental worksheets for students enrolled in the second course of organic chemistry at UNC Chapel Hill</li>
-                    <li class="col-12 col-sm-11">Provided aid through learning strategies, concept review, and upper-level thinking questions for students in a diverse classroom environment</li>
+                    <li class="col-12 col-sm-11">Provided aid and served as a leader by demonstrating and creating learning strategies, concept review, and upper-level thinking questions for students in a diverse classroom environment</li>
                     <li class="col-12 col-sm-11">Collaborated with a peer mentor team and the instructor to improve the understanding of important organic chemistry concepts among students</li>
                     <li class="col-12 col-sm-11">Developed problem-solving skills in order to maximize potential as a peer mentor</li>
                 </ul>
