--- a/skills.html
+++ b/skills.html
@@ -80,6 +80,19 @@
                     <li class="col-12 col-sm-12 col-lg-6">UV-Vis Spectrometry</li>
                     <li class="col-12 col-sm-12 col-lg-6">Writing for Scientific Publications</li>
                 </ul>
+                <h5 class="col-12 col-sm-12 e-co"><u>Ophthalmic Skills</u></h5>
+                <ul class="col-12 col-sm-12" style="padding-left: 10vw;">
+                    <li class="col-12 col-sm-12 col-lg-6">History taking/medical charting</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Pupillary assessment</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Lensometry</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Keratometry</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Ocular motility</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Refractometry</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Tonometry</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Visual assessment and visual fields</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Medication administration</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Instrument sterilization/maintenance</li>
+                </ul>
                 <h5 class="col-12 col-sm-12 e-co"><u>Soft Skills</u></h5>
                 <ul class="col-12 col-sm-12" style="padding-left: 10vw;">
                     <li class="col-12 col-sm-12 col-lg-6">Career Management</li>
