--- a/education.html
+++ b/education.html
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     
         <!-- Link to your custom stylesheet. Any non-Bootstrap styles you create go in this stylesheet. You can create new classes and IDs, or add new rules for classes that already exist in Bootstrap. Any rules you put in your custom stylesheet will override any styling applied to any elements of the same name in Bootstrap, as long as your custom stylesheet link comes AFTER your Bootstrap CSS link, the way it does here. -->
-        <link rel="stylesheet" type="text/css" href="experience.css">
+        <link rel="stylesheet" type="text/css" href="education.css">
     
         <!--Copyright notice when clicking image-->
         <script language="JavaScript" Type="text/javascript">
@@ -61,20 +61,31 @@
     <main class="row">
         <section class="col-12 col-sm-12 experience p-0">
             <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <img id="unc" class="col-8 col-sm-6 col-lg-4" src="HCC-Logo-White-footer.png" style="margin: 3em;" onMouseDown="popupMsg('Unable to access image functionalities')">
-                <h5 class="col-12 col-sm-12 e-co text-center">Visiting Student</h5>
-                <p class="col-12 col-sm-12 e-time text-center"><i>August 2022 - December 2022</i></p>
-                <p class="col-12 col-sm-12 e-location text-center">Courses completed: Medical Terminology for Health Professionals, Professional Interactions in Healthcare</p>
-                <p class="col-12 col-sm-12 e-location text-center">Clyde, North Carolina</p>
-            </article>
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <img id="unc" class="col-12 col-sm-8 col-lg-6" src="unc_logo.png" style="margin: 3em;" onMouseDown="popupMsg('Unable to access image functionalities')">
+                <img id="unc" class="col-11 col-sm-8 col-lg-6" src="unc_logo.png" onMouseDown="popupMsg('Unable to access image functionalities')">
                 <h5 class="col-12 col-sm-12 e-co text-center">Bachelor of Science - B.S. Biology, Chemistry Minor, Neuroscience Minor</h5>
                 <p class="col-12 col-sm-12 e-time text-center"><i>August 2018 - May 2022</i></p>
                 <p class="col-12 col-sm-12 e-location text-center">Chapel Hill, North Carolina</p>
             </article>
             <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <img id="ths" class="col-12 col-sm-8 col-lg-6" src="ths.png" style="margin: 3em;" onMouseDown="popupMsg('Unable to access image functionalities')">
+                <img id="scc" class="col-11 col-sm-6 col-lg-4" src="scc_logo.png" onMouseDown="popupMsg('Unable to access image functionalities')">
+                <h5 class="col-12 col-sm-12 e-co text-center">Visiting Student</h5>
+                <p class="col-12 col-sm-12 e-time text-center"><i>January 2023 - Current</i></p>
+                <p class="col-12 col-sm-12 e-location text-center">Course in progress: Human Anatomy & Physiology II
+                </p>
+                <p class="col-12 col-sm-12 e-location text-center">Clyde, North Carolina</p>
+            </article>
+            <article class="col-12 col-sm-12 col-lg-10 e-about">
+                <img id="hcc" class="col-8 col-sm-6 col-lg-4" src="HCC-Logo-White-footer.png" onMouseDown="popupMsg('Unable to access image functionalities')">
+                <h5 class="col-12 col-sm-12 e-co text-center">Visiting Student</h5>
+                <p class="col-12 col-sm-12 e-time text-center"><i>August 2022 - Current</i></p>
+                <p class="col-12 col-sm-12 e-location text-center">Courses completed: Medical Terminology for Health Professionals (Course 1), Professional Interactions in Healthcare
+                </p>
+                <p class="col-12 col-sm-12 e-location text-center">Course in progress: Medical Terminology for Health Professionals (Course 2)
+                </p>
+                <p class="col-12 col-sm-12 e-location text-center">Clyde, North Carolina</p>
+            </article>
+            <article class="col-12 col-sm-12 col-lg-10 e-about">
+                <img id="ths" class="col-11 col-sm-8 col-lg-6" src="ths.png" onMouseDown="popupMsg('Unable to access image functionalities')">
                 <h5 class="col-12 col-sm-12 e-co text-center">High School Diploma</h5>
                 <p class="col-12 col-sm-12 e-time text-center"><i>August 2014 - June 2018</i></p>
                 <p class="col-12 col-sm-12 e-location text-center">Waynesville, North Carolina</p>
