--- a/experience.html
+++ b/experience.html
@@ -62,21 +62,22 @@
     <main class="row">
         <section class="col-12 col-sm-12 experience">
 
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
+            <article style="margin-top: 5vh;" class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Ophthalmic Assistant</h4>
                 <h5 class="col-12 col-sm-12 e-co">Mountain Eye Associates</h5>
                 <p class="col-12 col-sm-12 e-time"><i>May 2022 - Present</i></p>
                 <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
                 <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-11">Assists Ophthalmologists/Optometrists treating patients with various visual conditions</li>
-                    <li class="col-12 col-sm-11">Develops relationships with patients while following Physician orders</li>
-                    <li class="col-12 col-sm-11">Works with patients to choose the best-fit eyewear - contacts, monofocal glasses, bifocals, trifocals</li>
+                    <li class="col-12 col-sm-11">Screens new, established, emergency, consultational, and referred patients thouroughly for visual impairments, eye diseases, and ocular conditions</li>
+                    <li class="col-12 col-sm-11">Develops rapport with patients regardless of a patient's medical and personal background</li>
+                    <li class="col-12 col-sm-11">Works with patients to determine the best-fit eyewear - contacts, monocles, monofocal glasses, bifocals, trifocals - for their lifestyle</li>
                     <li class="col-12 col-sm-11">Instructs patients on the proper utilization of contact lens and eyeglass use/care</li>
                     <li class="col-12 col-sm-11">Documents appointment details, maintaining patient charts with detailed notes</li>
-                    <li class="col-12 col-sm-11">Administers visual field tests, eye drop administration for dilation, tonometry, and refraction of patients</li>
-                    <li class="col-12 col-sm-11">Cleans and sterilizes equipment and cleans the work environment/patient rooms</li>
-                    <li class="col-12 col-sm-11">Provides proper drops to prepare patients for Yag/SLT surgeries</li>
+                    <li class="col-12 col-sm-11">Administers special testing for all forms of glaucoma and macular degeneration</li>
+                    <li class="col-12 col-sm-11">Cleans and sterilizes equipment, cleans the work environment/patient rooms, and maintains a safe and clean medical office</li>
+                    <li class="col-12 col-sm-11">Prepares patients for surgeries and procedures such as blepharoplasty, neoplasm biopsy, temporal artery biopsy, cataract surgery, and laser surgery</li>
                     <li class="col-12 col-sm-11">Educates patients/families on surgery details, complications, and after-care</li>
+                    <li class="col-12 col-sm-11">Works efficiently and effectively with a team of trained professionals to care for patients</li>
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
@@ -95,7 +96,6 @@
                     <li class="col-12 col-sm-11">Develops knowledge regarding the physics of the camera body and equipment used to capture images in differing environments</li>
                     <li class="col-12 col-sm-11">Generates a user-friendly and exciting customer experience both online and during the session</li>
                     <li class="col-12 col-sm-11">Organizes a business plan that favors the client's needs and generates income for the business</li>
-                    <li class="col-12 col-sm-11">Donates 10 percent of profits to a local nonprofit, 501(c)(3), organization</li>
                     <li class="col-12 col-sm-11">Serves over 50 clients across multiple counties in North Carolina</li>
                 </ul>
             </article>
@@ -106,7 +106,7 @@
 
             <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Undergraduate Researcher</h4>
-                <h5 class="col-12 col-sm-12 e-co">Dr. Stephen Rogers' Lab - UNC Chapel Hill Biology Department</h5>
+                <h5 class="col-12 col-sm-12 e-co">Dr. Stephen Rogers's Lab - UNC Chapel Hill Biology Department</h5>
                 <p class="col-12 col-sm-12 e-time"><i>January 2022 - April 2022</i></p>
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
                 <ul class="col-12 col-sm-12">
@@ -222,7 +222,7 @@
                     <li class="col-12 col-sm-11">Utilized Microsoft Excel for decisions related to choosing related research papers to further the research progress, using formulas and sorting</li>
                 </ul>
             </article>
-            <article class="col-12 col-sm-9 col-lg-10 image_and_link">
+            <article style="margin-bottom: 5vh;" class="col-12 col-sm-9 col-lg-10 image_and_link">
                 <img class="col-12 col-sm-12 col-lg-6" src="unc_dentistry.jpg" onMouseDown="popupMsg('Unable to access image functionalities')">
                 <a href="https://dentistry.unc.edu/discovery/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">UNC Adams School of Dentistry - Research</a>
             </article>
