--- a/skills.html
+++ b/skills.html
@@ -82,11 +82,13 @@
                 </ul>
                 <h5 class="col-12 col-sm-12 e-co"><u>Ophthalmic Skills</u></h5>
                 <ul class="col-12 col-sm-12" style="padding-left: 10vw;">
+                    <li class="col-12 col-sm-12 col-lg-6">Developing patient rapport</li>
                     <li class="col-12 col-sm-12 col-lg-6">History taking/medical charting</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Scribing for ophthalmologists and optometrists</li>
                     <li class="col-12 col-sm-12 col-lg-6">Pupillary assessment</li>
                     <li class="col-12 col-sm-12 col-lg-6">Lensometry</li>
                     <li class="col-12 col-sm-12 col-lg-6">Keratometry</li>
-                    <li class="col-12 col-sm-12 col-lg-6">Ocular motility</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Ocular motility assessment</li>
                     <li class="col-12 col-sm-12 col-lg-6">Refractometry</li>
                     <li class="col-12 col-sm-12 col-lg-6">Tonometry</li>
                     <li class="col-12 col-sm-12 col-lg-6">Visual assessment and visual fields</li>
@@ -100,6 +102,7 @@
                     <li class="col-12 col-sm-12 col-lg-6">Creativity & Problem-Solving</li>
                     <li class="col-12 col-sm-12 col-lg-6">Global Perspective</li>
                     <li class="col-12 col-sm-12 col-lg-6">Leadership</li>
+                    <li class="col-12 col-sm-12 col-lg-6">Maintaining a Clean and Safe Working Environment</li>
                     <li class="col-12 col-sm-12 col-lg-6">Professionalism & Work Ethic</li>
                     <li class="col-12 col-sm-12 col-lg-6">Teamwork & Collaboration</li>
                     <li class="col-12 col-sm-12 col-lg-6">Technical Application</li>
