--- a/education.html
+++ b/education.html
@@ -29,6 +29,7 @@
         </script>
     </head>
 <body class="container-fluid">
+
     <header class="row" style="z-index: 9;">
         <nav class="col-12 col-sm-12 navbar navbar-expand-md">
             <div id="menu-button-container" class="col-12 col-sm-12">
@@ -58,6 +59,7 @@
             </nav>
         </nav>
     </header>
+
     <main class="row">
         <section class="col-12 col-sm-12 experience p-0">
             <article class="col-12 col-sm-12 col-lg-10 e-about">
@@ -78,9 +80,9 @@
                 <img id="hcc" class="col-8 col-sm-6 col-lg-4" src="HCC-Logo-White-footer.png" onMouseDown="popupMsg('Unable to access image functionalities')">
                 <h5 class="col-12 col-sm-12 e-co text-center">Visiting Student</h5>
                 <p class="col-12 col-sm-12 e-time text-center"><i>August 2022 - Current</i></p>
-                <p class="col-12 col-sm-12 e-location text-center">Courses completed: Medical Terminology for Health Professionals (Course 1), Professional Interactions in Healthcare
+                <p class="col-12 col-sm-12 e-location text-center">Courses completed: Medical Terminology for Health Professionals I, Professional Interactions in Healthcare
                 </p>
-                <p class="col-12 col-sm-12 e-location text-center">Course in progress: Medical Terminology for Health Professionals (Course 2)
+                <p class="col-12 col-sm-12 e-location text-center">Course in progress: Medical Terminology for Health Professionals II
                 </p>
                 <p class="col-12 col-sm-12 e-location text-center">Clyde, North Carolina</p>
             </article>
