--- a/printing.html
+++ b/printing.html
@@ -190,12 +190,12 @@
         <section class="col-12 col-sm-12 group act-border">
             <article class="col-12 col-sm-12 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">American Red Cross Club of UNC-CH</h4>
-                <h5 class="col-12 col-sm-12 e-co">Social Media Chair (August 2021 - Present)</h5>
-                <p class="col-12 col-sm-12 e-time">Member since January 2020</p>
+                <h5 class="col-12 col-sm-12 e-co">Social Media Chair (August 2021 - May 2022)</h5>
+                <p class="col-12 col-sm-12 e-time">Member from January 2020 to May 2022</p>
             </article>
             <article class="col-12 col-sm-12 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">UNC Chapel Hill Swim Club</h4>
-                <p class="col-12 col-sm-12 e-time">Member since August 2018</p>
+                <p class="col-12 col-sm-12 e-time">Member from August 2018 to May 2022</p>
             </article>
         </section>
         <h2 class="col-12 col-sm-12 section-titles certs">Certifications</h2>
