April 18th Total Edit

--- a/education.html
+++ b/education.html
@@ -47,9 +47,6 @@
                         <a class="nav-link" href="experience.html">Experience</a>
                     </li>
                     <li class="col-12 col-md-2 nav-item">
-                        <a class="nav-link" href="skills.html">Skills</a>
-                    </li>
-                    <li class="col-12 col-md-2 nav-item">
                         <a class="nav-link" href="https://stephenawenzel.github.io/stephenwenzelphotography/index.html">Photography</a>
                     </li>
                     <li class="col-12 col-md-2 nav-item">
@@ -63,13 +60,13 @@
     <main class="row">
         <section class="col-12 col-sm-12 experience p-0">
             <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <img id="unc" class="col-11 col-sm-8 col-lg-6" src="unc_logo.png" onMouseDown="popupMsg('Unable to access image functionalities')">
+                <img id="unc" class="col-11 col-sm-8 col-lg-6" src="unc_logo.png" onMouseDown="popupMsg('Unable to access image')">
                 <h5 class="col-12 col-sm-12 e-co text-center">Bachelor of Science - B.S. Biology, Chemistry Minor, Neuroscience Minor</h5>
                 <p class="col-12 col-sm-12 e-time text-center"><i>August 2018 - May 2022</i></p>
                 <p class="col-12 col-sm-12 e-location text-center">Chapel Hill, North Carolina</p>
             </article>
             <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <img id="scc" class="col-11 col-sm-6 col-lg-4" src="scc_logo.png" onMouseDown="popupMsg('Unable to access image functionalities')">
+                <img id="scc" class="col-11 col-sm-6 col-lg-4" src="scc_logo.png" onMouseDown="popupMsg('Unable to access image')">
                 <h5 class="col-12 col-sm-12 e-co text-center">Visiting Student</h5>
                 <p class="col-12 col-sm-12 e-time text-center"><i>January 2023 - Current</i></p>
                 <p class="col-12 col-sm-12 e-location text-center">Course in progress: Human Anatomy & Physiology II
@@ -77,17 +74,17 @@
                 <p class="col-12 col-sm-12 e-location text-center">Clyde, North Carolina</p>
             </article>
             <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <img id="hcc" class="col-8 col-sm-6 col-lg-4" src="HCC-Logo-White-footer.png" onMouseDown="popupMsg('Unable to access image functionalities')">
+                <img id="hcc" class="col-8 col-sm-6 col-lg-4" src="HCC-Logo-White-footer.png" onMouseDown="popupMsg('Unable to access image')">
                 <h5 class="col-12 col-sm-12 e-co text-center">Visiting Student</h5>
                 <p class="col-12 col-sm-12 e-time text-center"><i>August 2022 - Current</i></p>
-                <p class="col-12 col-sm-12 e-location text-center">Courses completed: Medical Terminology for Health Professionals I, Professional Interactions in Healthcare
+                <p class="col-12 col-sm-12 e-location text-center">Completed Courses: Medical Terminology for Health Professionals I, Professional Interactions in Healthcare
                 </p>
                 <p class="col-12 col-sm-12 e-location text-center">Course in progress: Medical Terminology for Health Professionals II
                 </p>
                 <p class="col-12 col-sm-12 e-location text-center">Clyde, North Carolina</p>
             </article>
             <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <img id="ths" class="col-11 col-sm-8 col-lg-6" src="ths.png" onMouseDown="popupMsg('Unable to access image functionalities')">
+                <img id="ths" class="col-11 col-sm-8 col-lg-6" src="ths.png" onMouseDown="popupMsg('Unable to access image')">
                 <h5 class="col-12 col-sm-12 e-co text-center">High School Diploma</h5>
                 <p class="col-12 col-sm-12 e-time text-center"><i>August 2014 - June 2018</i></p>
                 <p class="col-12 col-sm-12 e-location text-center">Waynesville, North Carolina</p>
