--- a/index.html
+++ b/index.html
@@ -47,9 +47,6 @@
                         <a class="nav-link" href="experience.html">Experience</a>
                     </li>
                     <li class="col-12 col-md-2 nav-item">
-                        <a class="nav-link" href="skills.html">Skills</a>
-                    </li>
-                    <li class="col-12 col-md-2 nav-item">
                         <a class="nav-link" href="https://stephenawenzel.github.io/stephenwenzelphotography/index.html">Photography</a>
                     </li>
                     <li class="col-12 col-md-2 nav-item">
@@ -62,12 +59,12 @@
     <main class="row">
         <section id="content" class="col-12 col-sm-12 col-lg-12">
             <article class="col-12 col-sm-6 col-lg-4 headshot_box">
-                <img id="headshot" src="transparent_headshot.png" onMouseDown="popupMsg('Unable to access image functionalities')">
+                <img id="headshot" src="transparent_headshot.png" onMouseDown="popupMsg('Unable to access image')">
             </article>
             <article class="col-12 col-sm-12 col-md-6 col-lg-6 signature_title">
-                <img id="signature_stephen" class="col-12 col-sm-7 col-md-12 col-lg-12" src="white_signature.png" onMouseDown="popupMsg('Unable to access image functionalities')">
+                <img id="signature_stephen" class="col-12 col-sm-7 col-md-12 col-lg-12" src="white_signature.png" onMouseDown="popupMsg('Unable to access image')">
                 <p id="title" class="col-12 col-sm-12 col-lg-12 text-center pt-2">ONLINE RESUME</p>
-                <p id="updated" class="col-12 col-sm-12 col-lg-12 text-center pt-2">(Updated February 2023)</p>
+                <p id="updated" class="col-12 col-sm-12 col-lg-12 text-center pt-2">(Updated April 2023)</p>
             </article>
         </section>
     </main>
