April 2023 small edit

--- a/printing.html
+++ b/printing.html
@@ -32,9 +32,9 @@
     </div>
 </header>
 <main class="container-fluid">
-    <section class="row header-content">
+    <section class="row header-content pb-2">
         <h1 class="col-12 col-sm-12 text-center">Stephen Wenzel</h1>
-        <a class="col-6 col-sm-3 text-center" id="location">Chapel Hill, North Carolina</a>
+        <a class="col-6 col-sm-3 text-center" id="location">Clyde, North Carolina</a>
         <a class="col-3 col-sm-6 text-center" id="email" href="mailto:stephenawenzel@gmail.com">stephenawenzel@gmail.com</a>
         <a class="col-3 col-sm-3 text-center" id="phone" href="tel:8287344555">828-734-4555</a>
 
@@ -47,7 +47,7 @@
         <h2 class="col-12 col-sm-12 section-titles">Education</h2>
         <article class="col-6 col-sm-12 e-about">
             <h4 class="col-12 col-sm-12 e-titles">University of North Carolina at Chapel Hill</h4>
-            <h5 class="col-12 col-sm-12 e-co">Bachelor of Science - B.S. Biology, Neuroscience & Chemistry Double Minor (May 2022)</h5>
+            <h5 class="col-12 col-sm-12 e-co">Bachelor of Science in Biology; Neuroscience & Chemistry Double Minor (May 2022)</h5>
             <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
         </article>
         <!--
