--- a/experience.html
+++ b/experience.html
@@ -77,7 +77,7 @@
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img href="https://stephenawenzel.github.io/stephenwenzelphotography/" class="col-12 col-sm-12 col-lg-6" src="mea.jpg" onMouseDown="popupMsg('Unable to access image functionalities')">
+                <img href="https://stephenawenzel.github.io/stephenwenzelphotography/" class="col-12 col-sm-12 col-lg-6" src="MEA.jpg" onMouseDown="popupMsg('Unable to access image')">
                 <a href="https://mountaineye.org/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Mountain Eye Associates</a>
             </article>
 
@@ -96,7 +96,7 @@
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img href="https://stephenawenzel.github.io/stephenwenzelphotography/" class="col-12 col-sm-12 col-lg-6" src="https://drscdn.500px.org/photo/1040560161/m%3D900/v2?sig=a7e595a0b3e694284cf33a8a187e9c2f9be082e981950ef142fe741c8459becc" onMouseDown="popupMsg('Unable to access image functionalities')">
+                <img href="https://stephenawenzel.github.io/stephenwenzelphotography/" class="col-12 col-sm-12 col-lg-6" src="https://drscdn.500px.org/photo/1040560161/m%3D900/v2?sig=a7e595a0b3e694284cf33a8a187e9c2f9be082e981950ef142fe741c8459becc" onMouseDown="popupMsg('Unable to access image')">
                 <a href="https://stephenawenzel.github.io/stephenwenzelphotography/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Stephen Wenzel Photography</a>
             </article>
 
@@ -132,7 +132,7 @@
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img class="col-12 col-sm-12 col-lg-6" src="organic_chem.jpg" onMouseDown="popupMsg('Unable to access image functionalities')">
+                <img class="col-12 col-sm-12 col-lg-6" src="organic_chem.jpg" onMouseDown="popupMsg('Unable to access image')">
                 <a href="https://www.togetherplatform.com/blog/peer-mentorship" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-1" target="blank">How to be a Great Peer Mentor</a>
                 <a href="https://www.liberty.edu/casas/blog/the-power-of-peer-mentoring/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-1 mb-3" target="blank">The Power of Peer Mentoring</a>
             </article>
@@ -152,7 +152,7 @@
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img id="cssc_pic" class="col-12 col-sm-12 col-lg-6" href="https://ipep.unc.edu/students/carolina-covid-19-student-services-corps-carolina-cssc/" src="CarolinaCSSC1-768x554.png" onMouseDown="popupMsg('Unable to access image functionalities')">
+                <img id="cssc_pic" class="col-12 col-sm-12 col-lg-6" href="https://ipep.unc.edu/students/carolina-covid-19-student-services-corps-carolina-cssc/" src="CarolinaCSSC1-768x554.png" onMouseDown="popupMsg('Unable to access image')">
                 <a href="https://ipep.unc.edu/students/carolina-covid-19-student-services-corps-carolina-cssc/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Carolina COVID-19 Student Services Corps</a>
             </article>
 
@@ -170,7 +170,7 @@
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img class="col-12 col-sm-12 col-lg-6" src="https://drscdn.500px.org/photo/1067151255/m%3D900/v2?sig=287448e00429818e6b9f7ad6ff30ec013064a5f022428cd1dd50767676b4040f" onMouseDown="popupMsg('Unable to access image functionalities')">
+                <img class="col-12 col-sm-12 col-lg-6" src="https://drscdn.500px.org/photo/1067151255/m%3D900/v2?sig=287448e00429818e6b9f7ad6ff30ec013064a5f022428cd1dd50767676b4040f" onMouseDown="popupMsg('Unable to access image')">
                 <a href="http://rogerslab.unc.edu/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-1" target="blank">Rogers Lab</a>
                 <a href="http://www.sleplab.org/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-1 mb-3" target="blank">Slep Lab</a>
                 <a href="https://bio.unc.edu/undergraduate/research/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-1 mb-3" target="blank">UNC Biology Undergraduate Research</a>
@@ -188,7 +188,7 @@
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img class="col-12 col-sm-12 col-lg-6" src="https://drscdn.500px.org/photo/1067151256/m%3D900/v2?sig=c8bf9335a1c396f9c2a060c3336e2b3630dce36af937a90e16f34faab7edbc67" onMouseDown="popupMsg('Unable to access image functionalities')">
+                <img class="col-12 col-sm-12 col-lg-6" src="https://drscdn.500px.org/photo/1067151256/m%3D900/v2?sig=c8bf9335a1c396f9c2a060c3336e2b3630dce36af937a90e16f34faab7edbc67" onMouseDown="popupMsg('Unable to access image')">
                 <a href="https://www.wncentdoctors.com/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Western Carolina ENT & Center for Hearing</a>
             </article>
 
@@ -204,7 +204,7 @@
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img id="folkmoot" class="col-12 col-sm-12 col-lg-6" src="https://drscdn.500px.org/photo/1039207022/m%3D900/v2?sig=693296c3893d4c9c1188c7909b57706ebdf1d7acbdfef1987eedf1d6ecf11641" onMouseDown="popupMsg('Unable to access image functionalities')">
+                <img id="folkmoot" class="col-12 col-sm-12 col-lg-6" src="https://drscdn.500px.org/photo/1039207022/m%3D900/v2?sig=693296c3893d4c9c1188c7909b57706ebdf1d7acbdfef1987eedf1d6ecf11641" onMouseDown="popupMsg('Unable to access image')">
                 <a href="https://www.folkmoot.org/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Folkmoot's Website</a>
             </article>
 
@@ -219,7 +219,7 @@
                 </ul>
             </article>
             <article style="margin-bottom: 5vh;" class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img class="col-12 col-sm-12 col-lg-6" src="unc_dentistry.jpg" onMouseDown="popupMsg('Unable to access image functionalities')">
+                <img class="col-12 col-sm-12 col-lg-6" src="unc_dentistry.jpg" onMouseDown="popupMsg('Unable to access image')">
                 <a href="https://dentistry.unc.edu/discovery/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">UNC Adams School of Dentistry - Research</a>
             </article>
         </section>
